src/frontend/entrypoints/app.css
/* custom fonts */
/* IBM Plex Serif, Mono, Sans */
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

@import 'tailwindcss';
@plugin "@tailwindcss/typography";

/* tailwind configurations */
@theme {
  /* custom fonts */
  --font-serif: 'IBM Plex Serif', 'serif';
  --font-sans: 'IBM Plex Sans', 'sans-serif';
  --font-mono: 'IBM Plex Mono', 'monospace';

  /* screen breakpoints */
  --breakpoint-*: initial;
  --breakpoint-sm: '640px';
  --breakpoint-md: '750px';
  --breakpoint-lg: '990px';
  --breakpoint-xl: '1300px';
  --breakpoint-xxl: '1480px';

  /* more colours */
  --color-Background: 'rgb(var(--color-background))';
  --color-GradientBackground: 'var(--gradient-background)';
  --color-Foreground: 'rgb(var(--color-foreground))';
  --color-ForegroundLight: 'rgb(var(--color-foreground-light))';
  --color-Green: 'rgb(var(--color-green))';
  --color-Brown: 'rgb(var(--color-brown))';
  --color-Button: 'rgb(var(--color-button))';
  --color-ButtonText: 'rgb(var(--color-button-text))';
  --color-SecondaryButtonText: 'rgb(var(--color-secondary-button-text))';
  --color-Link: 'rgb(var(--color-link))';
  --color-Bone: 'rgb(var(--color-bone))';
  --color-BadgeForeground: 'rgb(var(--color-badge-foreground))';
  --color-BadgeBackground: 'rgb(var(--color-badge-background))';
  --color-BadgeBorder: 'rgb(var(--color-badge-border))';
  --color-BoneHex: 'var(--color-border-grey)';
  --color-PaymentTermsBackgroundColor: 'rgb(var(--payment-terms-background-color))';

  /* animations */
  @keyframes fade-in-scale {
    0% {
      opacity: 0;
      transform: scale(0.95);
    }
    100% {
      opacity: 1;
      transform: scale(1);
    }
  }

  @keyframes flicker {
    0%,
    50% {
      visibility: hidden;
    }
    100% {
      visibility: visible;
    }
  }
}

/* alpinejs cloak */
[x-cloak] {
  display: none !important;
}

img,
svg,
video,
canvas,
audio,
/* iframe, */
embed,
object {
  @apply inline-block;
}

html {
  scroll-behavior: smooth;
}

body {
  @apply !font-sans;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
.heading,
label,
button,
.button-primary,
.button-secondary {
  @apply !font-sans;
}

/* Dawn uses flexbox for the grid */
.grid {
  @apply flex;
}

/* thus we need to define the grid display */
.d-grid {
  display: grid;
}

.ibm-plex-mono-thin {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 100;
  font-style: normal;
}

.ibm-plex-mono-extralight {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 200;
  font-style: normal;
}

.ibm-plex-mono-light {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 300;
  font-style: normal;
}

.ibm-plex-mono-regular {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 400;
  font-style: normal;
}

.ibm-plex-mono-medium {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 500;
  font-style: normal;
}

.ibm-plex-mono-semibold {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 600;
  font-style: normal;
}

.ibm-plex-mono-bold {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 700;
  font-style: normal;
}

.ibm-plex-mono-thin-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 100;
  font-style: italic;
}

.ibm-plex-mono-extralight-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 200;
  font-style: italic;
}

.ibm-plex-mono-light-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 300;
  font-style: italic;
}

.ibm-plex-mono-regular-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 400;
  font-style: italic;
}

.ibm-plex-mono-medium-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 500;
  font-style: italic;
}

.ibm-plex-mono-semibold-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 600;
  font-style: italic;
}

.ibm-plex-mono-bold-italic {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 700;
  font-style: italic;
}

.ibm-plex-sans-thin {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 100;
  font-style: normal;
}

.ibm-plex-sans-extralight {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 200;
  font-style: normal;
}

.ibm-plex-sans-light {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 300;
  font-style: normal;
}

.ibm-plex-sans-regular {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 400;
  font-style: normal;
}

.ibm-plex-sans-medium {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 500;
  font-style: normal;
}

.ibm-plex-sans-semibold {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 600;
  font-style: normal;
}

.ibm-plex-sans-bold {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
}

.ibm-plex-sans-thin-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 100;
  font-style: italic;
}

.ibm-plex-sans-extralight-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 200;
  font-style: italic;
}

.ibm-plex-sans-light-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 300;
  font-style: italic;
}

.ibm-plex-sans-regular-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 400;
  font-style: italic;
}

.ibm-plex-sans-medium-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 500;
  font-style: italic;
}

.ibm-plex-sans-semibold-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 600;
  font-style: italic;
}

.ibm-plex-sans-bold-italic {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 700;
  font-style: italic;
}

.ibm-plex-serif-thin {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 100;
  font-style: normal;
}

.ibm-plex-serif-extralight {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 200;
  font-style: normal;
}

.ibm-plex-serif-light {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 300;
  font-style: normal;
}

.ibm-plex-serif-regular {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 400;
  font-style: normal;
}

.ibm-plex-serif-medium {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 500;
  font-style: normal;
}

.ibm-plex-serif-semibold {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 600;
  font-style: normal;
}

.ibm-plex-serif-bold {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 700;
  font-style: normal;
}

.ibm-plex-serif-thin-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 100;
  font-style: italic;
}

.ibm-plex-serif-extralight-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 200;
  font-style: italic;
}

.ibm-plex-serif-light-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 300;
  font-style: italic;
}

.ibm-plex-serif-regular-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 400;
  font-style: italic;
}

.ibm-plex-serif-medium-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 500;
  font-style: italic;
}

.ibm-plex-serif-semibold-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 600;
  font-style: italic;
}

.ibm-plex-serif-bold-italic {
  font-family: 'IBM Plex Serif', serif;
  font-weight: 700;
  font-style: italic;
}

